--- a/app/Resources/views/core/bird.html.twig
+++ b/app/Resources/views/core/bird.html.twig
@@ -6,37 +6,81 @@
 {{ 'core.bird.desc.name_latin'|trans }} : {{ bird.latinName }} <br/>
 {{ 'core.bird.desc.full_name'|trans }} : {{ bird.fullName }} <br/>
 {{ 'core.bird.desc.common_name'|trans }} : {{ bird.commonName }} <br/>
-</div>
 <hr>
 <div id="maps"></div>
 <hr>
 <h1>{{ 'core.bird.observation.title'|trans }}</h1><br/>
 
- <script>
-var map;
-function initMap() {
-	var zoneMarqueurs = new google.maps.LatLngBounds()
-	var tableauMarqueurs = [		
-		{ lat:47.325371, lng:1.044195 },	
-		{ lat:47.345627, lng:0.894806 },	
-		{ lat:47.334488, lng:0.944717 },	
-		{ lat:47.331615, lng:1.129307 },	
-		{ lat:47.270981, lng:1.375158 },	
-		{ lat:47.290585, lng:1.346169 },	
-		{ lat:47.330112, lng:0.995293 },	
-		{ lat:47.339272, lng:1.175795 },	
-		{ lat:47.307144, lng:1.318617 },	
-		{ lat:47.328671, lng:1.288072 },	
-		{ lat:47.344994, lng:1.212090 },	
-		{ lat:47.357315, lng:0.831850 },	
-		{ lat:47.342327,lng: 1.245060 }
-	];
-	map = new google.maps.Map(document.getElementById('maps'), {
-	  center: { lat: 47.389982, lng: 0.688877 },
-	  zoom: 8,
-	  mapTypeId: google.maps.MapTypeId.ROADMAP
-	});
+{% set observations = bird.observations %}
+{% set imgs = [] %}
 
+{% if observations is not empty %}
+	{% set gps = [] %}
+	{% for ob in observations %}
+		{% set gps = gps|merge(['{lat:' ~ ob.lattitude ~ ', lng: ' ~ ob.longitude ~ ' },']) %}
+		{% set imgs = imgs|merge([ob.image.image]) %}
+		<p class="observation">{{ ob.country }} <b>{{ ob.date|localizeddate('none', 'none', null, null, 'd MMMM Y') }}</b><br />
+			{{ ob.comment }}
+		</p>
+	{% endfor %}
+	<a href="#" id="loadMore">Load More</a>
+{% else %}
+	<p>Il n'éxiste aucune observations liées à cet oiseau</p>
+{% endif %}
+<br />
+{% if imgs is not empty %}
+    	<div class="jcarousel-wrapper">
+                <div class="jcarousel">
+                    <ul>
+                    	{% for key, imageUrl in imgs %}
+                        <li><img src="{{ imageUrl }}" alt="Image {{ key }}"></li>
+                        {% endfor %}
+                    </ul>
+                </div>
+
+                <a href="#" class="jcarousel-control-prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+                <a href="#" class="jcarousel-control-next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+
+                <p class="jcarousel-pagination"></p>
+            </div>
+        </div>
+
+
+{% endif %}
+
+</div>
+ {% if imgs is not empty %}
+
+{% endif %}
+
+{% block javascripts %}
+
+    {% javascripts filter='?jsqueeze'
+        'bundles/app/js/jquery.jcarousel.min.js'
+        'bundles/app/js/jcarousel.responsive.js'
+    %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock %}
+ <script>
+
+
+function initMap() {
+	var map;
+	map = new google.maps.Map(document.getElementById('maps'), {
+      center: {lat: 46.227638, lng: 2.213749000000007},
+	  zoom: 6,
+	  mapTypeId: google.maps.MapTypeId.TERRAIN
+	});
+	{% if observations is not empty %}
+	var zoneMarqueurs = new google.maps.LatLngBounds()
+	var tableauMarqueurs = [
+
+	{% for l_l in gps %}
+   		{{ l_l }}
+	{% endfor %}
+
+	];
 	for( var i = 0, I = tableauMarqueurs.length; i < I; i++ ) {
 
 		var latlng = tableauMarqueurs[i],							//	var latlng = tableauMarqueurs[i],
@@ -46,11 +90,11 @@ function initMap() {
 		var optionsMarqueur = {
 			map: map,
 			position: new google.maps.LatLng( latitude, longitude ),
-			title: 'point numero ' + i
+			animation: google.maps.Animation.DROP
 		};
 		var marqueur = new google.maps.Marker( optionsMarqueur );
 		zoneMarqueurs.extend( marqueur.getPosition() );
-		var content = "<h3>Latitude : " + latitude +  '</h3>' + "longitude: " + longitude    
+		var content = "<h3>{{ bird.commonName }}</h3>"  
 
   		var infowindow = new google.maps.InfoWindow()
 		google.maps.event.addListener(marqueur,'click', (function(marqueur,content,infowindow){ 
@@ -62,6 +106,7 @@ function initMap() {
 
 	}
 	map.fitBounds( zoneMarqueurs );
+	{% endif %}
 }
 $('#precedent').click(function(e){
     e.preventDefault();
@@ -75,5 +120,20 @@ if (typeof google === 'object' && typeof google.maps === 'object') {
 else {
 	jQuery.getScript("https://maps.googleapis.com/maps/api/js?key=AIzaSyBYM7ehj93A-AEdTDupTMEL7wAgOHWCTxA&callback=initMap")
 }
+
+
+$(function () {
+    $(".observation").slice(0, 1).show();
+    $("#loadMore").on('click', function (e) {
+        e.preventDefault();
+        $(".observation:hidden").slice(0, 1).slideDown();
+        if ($(".observation:hidden").length == 0) {
+            $("#load").fadeOut('slow');
+        }
+        $('html,body').animate({
+            scrollTop: $(this).offset().top
+        }, 1500);
+    });
+});
 
 </script>
