--- a/web/bundles/app/css/main.css
+++ b/web/bundles/app/css/main.css
@@ -44,10 +44,6 @@ a {
   margin-top: 48px;
   margin-bottom: 48px;
 }
-#maps {
-    width: 100%;
-    height: 500px;  
-}
 
 .nao_title {
   padding: 10px 10px;
@@ -67,11 +63,11 @@ a {
   max-width: 51px;
   max-height: 51px;
 }
-
-
-
-
-
+.jcarousel img {
+    display: block;
+    max-width: 100%;
+    height: auto !important;
+}
 
 
 @media (max-width: 767px) {
