--- a/web/bundles/app/css/jcarousel.responsive.css
+++ b/web/bundles/app/css/jcarousel.responsive.css
@@ -1,5 +1,5 @@
 .jcarousel-wrapper {
-    margin: 20px auto;
+    margin:50px auto 50px auto;
     position: relative;
     border: 10px solid #fff;
     -webkit-border-radius: 5px;
