--- a/app/Resources/views/core/bird.html.twig
+++ b/app/Resources/views/core/bird.html.twig
@@ -1,15 +1,36 @@
-<a href="{{ path('find') }}" id="precedent">Retourez aux résultats de la recherche</a><br />
-<hr>
-<h2>{{ bird.commonName }}</h2><br/>
-{{ 'core.bird.desc.family'|trans }} : {{ bird.family }} <br/>
-{{ 'core.bird.desc.rang'|trans }} : {{ bird.rank }} <br/>
-{{ 'core.bird.desc.name_latin'|trans }} : {{ bird.latinName }} <br/>
-{{ 'core.bird.desc.full_name'|trans }} : {{ bird.fullName }} <br/>
-{{ 'core.bird.desc.common_name'|trans }} : {{ bird.commonName }} <br/>
-<hr>
+{% block stylesheets %}
+    {% stylesheets filter='cssrewrite, ?scssphp'
+        'bundles/app/css/fiche-bird.css' %}
+        <link rel="stylesheet" href="{{ asset_url }}" type="text/css">
+    {% endstylesheets %}
+{% endblock %}
+<div class="col-xs-12">
+	<p>
+		<a href="{{ path('find') }}" id="precedent" class="btn btn-default btn-lg">
+		  <span class="glyphicon glyphicon-arrow-left"></span>
+		</a>
+	</p> 
+	<div class="col-xs-12 col-sm-6">
+		{% image 'http://assets.fhuszti.tech/nao/second-menu/search.png' %}
+			<img src="{{ asset_url }}" alt="" />
+		{% endimage %}
+	</div>
+
+	<div class="col-xs-12 col-sm-6 nao_title-icon">
+		<h1>{{ bird.commonName }}</h1>
+		<p>
+			{{ 'core.bird.desc.family'|trans }} : {{ bird.family }} <br/>
+			{{ 'core.bird.desc.rang'|trans }} : {{ bird.rank }} <br/>
+			{{ 'core.bird.desc.name_latin'|trans }} : {{ bird.latinName }} <br/>
+			{{ 'core.bird.desc.full_name'|trans }} : {{ bird.fullName }} <br/>
+			{{ 'core.bird.desc.common_name'|trans }} : {{ bird.commonName }} <br/>
+		</p>
+	</div>
 <div id="maps"></div>
-<hr>
-<h1>{{ 'core.bird.observation.title'|trans }}</h1><br/>
+
+<div class="bird_title">
+<h1>{{ 'core.bird.observation.title'|trans }}</h1>
+</div>
 
 {% set observations = bird.observations %}
 {% set imgs = [] %}
@@ -18,16 +39,26 @@
 	{% set gps = [] %}
 	{% for ob in observations %}
 		{% set gps = gps|merge(['{lat:' ~ ob.lattitude ~ ', lng: ' ~ ob.longitude ~ ' },']) %}
-		{% set imgs = imgs|merge([ob.image.image]) %}
-		<p class="observation">{{ ob.country }} <b>{{ ob.date|localizeddate('none', 'none', null, null, 'd MMMM Y') }}</b><br />
+		{% if ob.image is not empty %}
+			{% set imgs = imgs|merge([ob.image.image]) %}
+		{% endif %}
+		<div class="observation">
+			<p>
+			{{ ob.country }} <b>{{ ob.date|localizeddate('none', 'none', null, null, 'd MMMM Y') }}</b><br />
 			{{ ob.comment }}
-		</p>
+			</p>
+			<hr class="hr_bird">
+		</div>
 	{% endfor %}
-	<a href="#" id="loadMore">Load More</a>
+	<div class="text-center"> 
+		<button type="button" class="btn btn-primary btn-lg bird_btn_more" id="loadMore">En voir plus <img src="{{ asset('bundles/app/img/more.png') }}" width="50" /> </button>
+	</div>
 {% else %}
 	<p>Il n'éxiste aucune observations liées à cet oiseau</p>
 {% endif %}
-<br />
+<div class="bird_title">
+<h1>{{ 'core.bird.photo.title'|trans }}</h1>
+</div>
 {% if imgs is not empty %}
     	<div class="jcarousel-wrapper">
                 <div class="jcarousel">
@@ -42,16 +73,11 @@
                 <a href="#" class="jcarousel-control-next"><i class="glyphicon glyphicon-chevron-right"></i></a>
 
                 <p class="jcarousel-pagination"></p>
-            </div>
         </div>
 
 
 {% endif %}
-
 </div>
- {% if imgs is not empty %}
-
-{% endif %}
 
 {% block javascripts %}
 
@@ -63,15 +89,13 @@
     {% endjavascripts %}
 {% endblock %}
  <script>
-
-
-function initMap() {
-	var map;
-	map = new google.maps.Map(document.getElementById('maps'), {
-      center: {lat: 46.227638, lng: 2.213749000000007},
+ function initMap() {
+ 	var map = new google.maps.Map(document.getElementById('maps'), {
+	  center: {lat: 46.227638, lng: 2.213749000000007},
 	  zoom: 6,
 	  mapTypeId: google.maps.MapTypeId.TERRAIN
 	});
+
 	{% if observations is not empty %}
 	var zoneMarqueurs = new google.maps.LatLngBounds()
 	var tableauMarqueurs = [
@@ -94,7 +118,6 @@ function initMap() {
 		};
 		var marqueur = new google.maps.Marker( optionsMarqueur );
 		zoneMarqueurs.extend( marqueur.getPosition() );
-		var content = "<h3>{{ bird.commonName }}</h3>"  
 
   		var infowindow = new google.maps.InfoWindow()
 		google.maps.event.addListener(marqueur,'click', (function(marqueur,content,infowindow){ 
@@ -108,25 +131,37 @@ function initMap() {
 	map.fitBounds( zoneMarqueurs );
 	{% endif %}
 }
+if (typeof google === 'object' && typeof google.maps === 'object') {
+	var map = new google.maps.Map(document.getElementById('maps'), {
+	  center: {lat: 46.227638, lng: 2.213749000000007},
+	  zoom: 6
+	});
+	$(document).ready(function() {
+	    $(window).resize(function() {
+	        google.maps.event.trigger(map, 'resize');
+	    });
+	    google.maps.event.trigger(map, 'resize');
+		initMap();
+	});
+ 
+}
+else {
+	jQuery.getScript("https://maps.googleapis.com/maps/api/js?key=AIzaSyBYM7ehj93A-AEdTDupTMEL7wAgOHWCTxA&callback=initMap");
+
+}
 $('#precedent').click(function(e){
     e.preventDefault();
     $('#container_fiche').empty();
-    $('#container_find').show('slow');
+    $('#container_find,.nao_title').show('slow');
+    $('body').css({'background-image': 'url(http://assets.fhuszti.tech/nao/fiche-oiseau/fiche-bg.jpg)'});
     return false;
 });
-if (typeof google === 'object' && typeof google.maps === 'object') {
- 	initMap()
-}
-else {
-	jQuery.getScript("https://maps.googleapis.com/maps/api/js?key=AIzaSyBYM7ehj93A-AEdTDupTMEL7wAgOHWCTxA&callback=initMap")
-}
-
 
 $(function () {
-    $(".observation").slice(0, 1).show();
+    $(".observation").slice(0, 3).show();
     $("#loadMore").on('click', function (e) {
         e.preventDefault();
-        $(".observation:hidden").slice(0, 1).slideDown();
+        $(".observation:hidden").slice(0, 3).slideDown();
         if ($(".observation:hidden").length == 0) {
             $("#load").fadeOut('slow');
         }
@@ -135,5 +170,4 @@ $(function () {
         }, 1500);
     });
 });
-
 </script>
