--- a/web/bundles/app/css/search.css
+++ b/web/bundles/app/css/search.css
@@ -4,14 +4,6 @@ body {
   	background-position: center center;
   	background-repeat: no-repeat;
 }
-#maps {
-    width: 100%;
-    height: 500px;
-    background-color: grey;
-}
-.observation {
-    display:none;
-}
 .search-input {
 	height:70px;
 	border:0px;
@@ -40,9 +32,13 @@ body {
 	margin-top: 45px;
 	padding: 0px;
 	font-size: 1.2em;
-	background-color: #fff;
+	background-color: #f2f1ef;
+	opacity:0.90;
 	border: 1px outset #eee;
+	min-height: 755px;
 }
  #container_fiche {
  	padding:20px;
  }
+ .w3-green,.w3-hover-green:hover{color:#000!important;background-color:#87d37c!important}
+ .w3-opacity-3,.w3-hover-opacity:hover{opacity:0.80}
