--- a/src/AppBundle/Resources/views/Contact/contact.html.twig
+++ b/src/AppBundle/Resources/views/Contact/contact.html.twig
@@ -59,6 +59,10 @@
 			{{ form_end(form) }}
 		</div>
 		<div class="col-xs-12 col-sm-offset-1 col-sm-8" id="thanks">
+			<div class="col-sm-offset-1 col-sm-10" id="textThanks">
+				<p>MERCI!!</p>
+				<p>Votre message vient d'être envoyé, nous vous répondrons dans les plus brefs délais.</p>
+			</div>
 		</div>
 	</div>
 	<div class="row">
