--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -29,27 +29,36 @@
     </div>
     <div class="row">
       <div id="containerObservation" class="col-sm-offset-1 col-sm-8">
+        {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
+          <img id="bgMobile" class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/observations/observations-bg-mobile.jpg' }}" alt="{{'core.logo.alt'|trans}}" class="hidden-xs" />
+        {% endimage %}
         <div id="firstCorner" class="cornerSeparation">
           {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
             <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/separator-angle.png' }}" alt="{{'core.logo.alt'|trans}}" class="hidden-xs" />
           {% endimage %}
         </div>
         <div id="locationTitle" class="col-sm-offset-1">
-          <p>LOCALITE *: Déplacer le marqueur sur la carte pour localiser le lieu de l'observation</p>
+          <p>{{ 'observation.locationTitle'|trans }}</p>
         </div>
         <div id="map"></div>
         <div class="row">
           <div class="col-xs-6">
-            <a href="#" type="button"  onclick="initMap()">
+            <a id="linkGeolocation" href="#" type="button"  onclick="initMap()">
               <div id="buttonGeolocation">
-                <p></p>          
+                {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
+                  <img id="iconLoc" class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/observations/observations-loc.png' }}" alt="{{'core.logo.alt'|trans}}" class="hidden-xs" />
+                {% endimage %}
+                <p>{{ 'observation.buttonGeolocation'|trans }}</p>          
               </div>
             </a>
           </div>
           <div class="col-xs-6">
-            <a href="#" type="button"  onclick="ioo()">
+            <a id="linkMap" href="#" type="button"  onclick="ioo()">
               <div id="buttonDisplayMap">
-                <p></p>          
+                {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
+                  <img id="iconWorld" class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/observations/observations-world.png' }}" alt="{{'core.logo.alt'|trans}}" class="hidden-xs" />
+                {% endimage %}
+                <p>{{ 'observation.buttonMap'|trans }}</p>          
               </div>
             </a>
           </div>
@@ -141,10 +150,14 @@
           {{ form_rest(form) }}
           {{ form_end(form) }}
       </div>
+      </div>
+      </div>
       <div id="thanks" class="col-sm-offset-1 col-sm-8">
-        <p>Merci !</p>
-        <p>Votre observation vient d'être envoyée, elle va être soumise à validation par nos profesionnels avant édition sur notre site.</p>
-        <p>Vous serez notifié de sa validation dans vorte espace personnel.</p>
+        <div id="textThanks" class="col-sm-offset-1 col-sm-10">
+          <p>Merci !</p>
+          <p>Votre observation vient d'être envoyée, elle va être soumise à validation par nos profesionnels avant édition sur notre site.</p>
+          <p>Vous serez notifié de sa validation dans vorte espace personnel.</p>
+        </div>
         <div id="blocNewObservationButton" class="col-sm-offset-4 col-sm-4">
           <a href="#" type="button" >
             <div id="newObservationButton">
@@ -153,15 +166,16 @@
           </a>
         </div>
       </div>
+      </div>
     </div>
   </div>
-  <script src="{{asset('bundles/app/js/autocomplete.js') }}"></script>
-  <script src="{{asset('bundles/app/js/datepicker.js') }}"></script>
-  <script src="{{asset('bundles/app/js/previewImage.js') }}"></script>
-  <script src="{{asset('bundles/app/js/geolocation.js') }}"></script>
-  <script src="{{asset('bundles/app/js/marker.js') }}"></script>
-  <script src="{{asset('bundles/app/js/map.js') }}"></script>
-  <script src="{{asset('bundles/app/js/geocoding.js') }}"></script>
+  <script src="{{asset('bundles/app/js/Observation/autocomplete.js') }}"></script>
+  <script src="{{asset('bundles/app/js/Observation/datepicker.js') }}"></script>
+  <script src="{{asset('bundles/app/js/Observation/previewImage.js') }}"></script>
+  <script src="{{asset('bundles/app/js/Observation/geolocation.js') }}"></script>
+  <script src="{{asset('bundles/app/js/Observation/marker.js') }}"></script>
+  <script src="{{asset('bundles/app/js/Observation/map.js') }}"></script>
+  <script src="{{asset('bundles/app/js/Observation/geocoding.js') }}"></script>
   <script> 
   var pathControllerObservation = '{{ path('app_observation') }}';
   var pathControllerSearch = '{{ path('search') }}';
