--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -77,12 +77,13 @@
               {% endimage %}
             </div>
             <div class="col-sm-offset-1">
-              {{ form_label(form.birdName) }}
+              {{ form_label(form.bird_name) }}
             </div>
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-offset-3 col-sm-8">
-              {{ form_widget(form.birdName) }}
+              {{ form_widget(form.bird_name) }}
+              {{ form_errors(form.bird_name) }}
             </div>
           </div>
           <div class="row">
@@ -104,6 +105,7 @@
           <div class="row">
             <div class="col-xs-12 col-sm-offset-3 col-sm-8">
               {{ form_widget(form.date) }}
+              {{ form_errors(form.date) }}
             </div>
           </div>
         </div>
@@ -121,6 +123,7 @@
           <div class="row">
             <div id="textarea" class="col-xs-12 col-sm-offset-1 col-sm-10">
               {{ form_widget(form.comment) }}
+              {{ form_errors(form.date) }}
             </div>
           </div>
         </div>
@@ -138,6 +141,7 @@
           <div class="row">
             <div class="col-sm-offset-1 col-sm-2">
               {{ form_widget(form.image) }}
+              {{ form_errors(form.date) }}
             </div>
             <div id="imageBlock" class="col-sm-offset-2 col-sm-3">
               <img id="aperçuImage" src="#" alt="" />
@@ -180,7 +184,7 @@
   var pathControllerObservation = '{{ path('app_observation') }}';
   var pathControllerSearch = '{{ path('search') }}';
   </script>
-  <script src="{{asset('bundles/app/js/ajax.js') }}"></script>
+  <script src="{{asset('bundles/app/js/Observation/ajax.js') }}"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyClMpsB5o4zV5aVVxdivP39F_QuXZ5RSEM&libraries=places&callback=initAutocomplete"
          async defer></script>
   </body>
