--- a/src/AppBundle/Resources/views/Observation/observation.html.twig
+++ b/src/AppBundle/Resources/views/Observation/observation.html.twig
@@ -14,7 +14,7 @@
   </head>
   <body>
   <div id="containerPageObs" class="col-sm-12">
-    <div class="row">
+    <div class="row noPadding">
       <div id="title" class="col-sm-offset-1 col-sm-8">
         <div id="k">
           <p>Observation</p>
@@ -27,7 +27,7 @@
         <hr id="underline"  class="col-sm-8"/>
       </div>
     </div>
-    <div class="row">
+    <div class="row noPadding">
       <div id="containerObservation" class="col-sm-offset-1 col-sm-8">
         {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
           <img id="bgMobile" class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/observations/observations-bg-mobile.jpg' }}" alt="{{'core.logo.alt'|trans}}" class="hidden-xs" />
@@ -41,7 +41,7 @@
           <p>{{ 'observation.locationTitle'|trans }}</p>
         </div>
         <div id="map"></div>
-        <div class="row">
+        <div class="row noPadding">
           <div class="col-xs-6">
             <a id="linkGeolocation" href="#" type="button"  onclick="initMap()">
               <div id="buttonGeolocation">
@@ -70,7 +70,7 @@
         {{ form_row(form.lattitude, { 'label_attr': {'class': 'lattitude'} }) }}
         {{ form_row(form.country, { 'label_attr': {'class': 'country'} }) }}
         <div id="birdName">
-          <div class="row">
+          <div class="row noPadding">
             <div class="cornerSeparation">
               {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
                 <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/separator-angle.png' }}" alt="{{'core.logo.alt'|trans}}" class="hidden-xs" />
@@ -80,19 +80,20 @@
               {{ form_label(form.bird_name) }}
             </div>
           </div>
-          <div class="row">
+          <div class="row noPadding">
             <div class="col-xs-12 col-sm-offset-3 col-sm-8">
               {{ form_widget(form.bird_name) }}
               {{ form_errors(form.bird_name) }}
             </div>
           </div>
-          <div class="row">
+          <div class="row noPadding">
             <div class="col-xs-12 col-sm-offset-3 col-sm-8">
             <div class="list-group" id="results">
           </div>
         </div>
+        </div>
         <div id="date">
-          <div class="row">
+          <div class="row noPadding">
             <div class="cornerSeparation">
               {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
                 <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/separator-angle.png' }}" alt="{{'core.logo.alt'|trans}}" class="hidden-xs" />
@@ -102,7 +103,7 @@
               {{ form_label(form.date) }}
             </div>
           </div>
-          <div class="row">
+          <div class="row noPadding">
             <div class="col-xs-12 col-sm-offset-3 col-sm-8">
               {{ form_widget(form.date) }}
               {{ form_errors(form.date) }}
@@ -110,7 +111,7 @@
           </div>
         </div>
         <div id="comment">
-          <div class="row">
+          <div class="row noPadding">
             <div class="cornerSeparation">
               {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
                 <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/separator-angle.png' }}" alt="{{'core.logo.alt'|trans}}" class="hidden-xs" />
@@ -120,7 +121,7 @@
               {{ form_label(form.comment) }}
             </div>
           </div>
-          <div class="row">
+          <div class="row noPadding">
             <div id="textarea" class="col-xs-12 col-sm-offset-1 col-sm-10">
               {{ form_widget(form.comment) }}
               {{ form_errors(form.date) }}
@@ -128,7 +129,7 @@
           </div>
         </div>
         <div id="image">
-          <div class="row">
+          <div class="row noPadding">
             <div class="col-sm-offset-1">
               <div class="cornerSeparation">
                 {% image 'http://assets.fhuszti.tech/nao/logo.png' %}
@@ -138,12 +139,12 @@
               {{ form_label(form.image) }}
             </div>
           </div>
-          <div class="row">
+          <div class="row noPadding">
             <div class="col-sm-offset-1 col-sm-2">
               {{ form_widget(form.image) }}
-              {{ form_errors(form.date) }}
+              {{ form_errors(form.image) }}
             </div>
-            <div id="imageBlock" class="col-sm-offset-2 col-sm-3">
+            <div id="imageBlock" class="col-sm-offset-2 col-sm-3 col-xs-12">
               <img id="aperçuImage" src="#" alt="" />
             </div>   
           </div>
