Page contact et ses fonctionnalitées terminée

--- a/app/Resources/views/core/bird.html.twig
+++ b/app/Resources/views/core/bird.html.twig
@@ -55,7 +55,7 @@
 		</div>
 	{% endfor %}
 	<div class="text-center"> 
-		<button type="button" class="btn btn-primary btn-lg bird_btn_more" id="loadMore">En voir plus <img src="{{ asset('bundles/app/img/more.png') }}" width="50" /> </button>
+		<button type="button" class="btn btn-primary btn-lg btn-standard" id="loadMore">En voir plus <img src="{{ asset('bundles/app/img/more.png') }}" width="50" /> </button>
 	</div>
 {% else %}
 	<p>Il n'éxiste aucune observations liées à cet oiseau</p>
