--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -59,8 +59,8 @@
         {% block javascripts %}
             {% javascripts filter='?jsqueeze'
                 '//code.jquery.com/jquery-3.2.1.min.js'
-                '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'
-                '//code.jquery.com/ui/1.12.1/jquery-ui.js' %}
+                '//code.jquery.com/ui/1.12.1/jquery-ui.js' 
+                '//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js' %}
                 <script type="text/javascript" src="{{ asset_url }}"></script>
             {% endjavascripts %}
         {% endblock %}
