--- a/web/bundles/app/css/main.css
+++ b/web/bundles/app/css/main.css
@@ -70,6 +70,47 @@ a {
 }
 .w3-margin-top{margin-top:16px!important}.w3-margin-bottom{margin-bottom:16px!important}
 
+.btn-standard {
+   padding: 10px 30px 10px 30px;
+   background-color: #318CE7;
+   font-size: 20pt;
+   font-family: 'OpenSans Regular';
+ }
+.w3-center{text-align:center!important}
+input.parsley-success,
+select.parsley-success,
+textarea.parsley-success {
+  color: #333;
+  background-color: #DFF0D8;
+  border: 1px solid #D6E9C6;
+}
+
+input.parsley-error,
+select.parsley-error,
+textarea.parsley-error {
+  color: #B94A48;
+  background-color: #F2DEDE;
+  border: 1px solid #EED3D7;
+}
+
+.parsley-errors-list {
+  margin: 2px 0 3px;
+  padding: 0;
+  list-style-type: none;
+  font-size: 0.9em;
+  line-height: 0.9em;
+  opacity: 0;
+
+  transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  -webkit-transition: all .3s ease-in;
+}
+
+.parsley-errors-list.filled {
+  opacity: 1;
+}
+
 @media (max-width: 767px) {
   #wrapper {
     margin-bottom: 30px;
