--- a/app/Resources/views/form/form_errors.html.twig
+++ b/app/Resources/views/form/form_errors.html.twig
@@ -4,7 +4,7 @@
     {% spaceless %}
         {% if errors|length > 0 %}
             {% for error in errors %}
-                <div class="alert alert-danger col-xs-12">
+                <div class="alert alert-danger col-xs-12 form-error-custom">
                     {{ error.message }}
                 </div>
             {% endfor %}
