--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
@@ -40,7 +40,7 @@
     </div>
     
     <div class="form-group" id="profile_pass-modal-submit-group">
-        <button type="submit" id="profile_pass-modal-button" data-loading-text="<span class='glyphicon glyphicon-repeat'></span>">
+        <button type="submit" class="btn btn-info" id="profile_pass-modal-button" data-loading-text="<span class='glyphicon glyphicon-repeat'></span> En cours de validation&#8230;">
         	{{ 'core.profile.block1.content.edit'|trans|upper }}
         </button>
     </div>
