L'admin peut désormais changer le statut des observations

--- a/app/Resources/FOSUserBundle/views/Profile/macros/_macroObservationModal.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/macros/_macroObservationModal.html.twig
@@ -18,6 +18,10 @@
 			      		</div>
 		      		</div>
 		      	</div>
+
+		      	<div class="modal-footer">
+			        <button class="btn btn-info" data-dismiss="modal">Fermer</button>
+			     </div>
 		    </div>
 	  	</div>
 	</div>
