--- a/app/Resources/views/admin/blocks/observations/observations.tab-waiting.html.twig
+++ b/app/Resources/views/admin/blocks/observations/observations.tab-waiting.html.twig
@@ -1,6 +1,6 @@
 <div class="tab-pane" id="waiting">
 	{% for observation in observations|reverse if observation.status is null %}
-        {{ macroObservationDisplay.observation_display(observation) }}
+        {{ macroObservationDisplay.observation_display(observation, 'waiting') }}
     {% else %}
         {% include 'admin/blocks/observations/observations.empty.html.twig' %}
     {% endfor %}
