--- a/app/Resources/views/admin/macros/_macroObservationModal.html.twig
+++ b/app/Resources/views/admin/macros/_macroObservationModal.html.twig
@@ -2,9 +2,16 @@
 	<div class="modal fade" id="admin_obs-modal">
 	  	<div class="modal-dialog">
 		    <div class="modal-content">
-		      	<div class="modal-body admin_obs-modal-body">
-		      		<button type="button" class="close" data-dismiss="modal">x</button>
+		      	<div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal">x</button>
+			        
+			        <h4 class="modal-title">
+			        	<div class="btn-group" id="admin_obs-modal-state"> 
+						</div>
+			        </h4>
+			     </div>
 
+		      	<div class="modal-body admin_obs-modal-body">
 		      		<div class="row">
 			      		<div class="col-xs-12 col-sm-5 admin_obs-modal-left-panel">
 			      		</div>
@@ -18,6 +25,10 @@
 			      		</div>
 		      		</div>
 		      	</div>
+
+		      	<div class="modal-footer">
+			        <button class="btn btn-info" data-dismiss="modal">Fermer</button>
+			     </div>
 		    </div>
 	  	</div>
 	</div>
