--- a/web/bundles/app/css/admin.css
+++ b/web/bundles/app/css/admin.css
@@ -45,11 +45,14 @@ body {
 	background-color: #eee;
 }
 
-#observations .modal-content {
+#admin_obs-modal .modal-content {
 	background-color: rgb(187, 223, 180);
 }
-#observations .admin_obs-modal-body>div:first-of-type {
-	margin-top: 30px;
+#admin_obs-modal-state ul {
+	padding: 0;
+}
+#admin_obs-modal-state ul li a {
+	line-height: 30px;
 }
 .admin_obs-modal-left-panel img {
 	width: 100%;
