--- a/web/bundles/app/css/admin.css
+++ b/web/bundles/app/css/admin.css
@@ -46,15 +46,32 @@ body {
 #observations .observation-row, #users .user-row {
 	border-bottom: 1px solid #ccc;
 	line-height: 50px;
-	cursor: pointer;
 }
 #observations .observation-row:hover, #observations .observation-row:active, #observations .observation-row:focus {
 	background-color: #eee;
 }
 
-#admin_obs-modal .modal-content, #admin_user-delete-modal .modal-content, #admin_user-edit-modal .modal-content {
+#admin_content, #admin_obs-modal .modal-content, #admin_user-delete-modal .modal-content, #admin_user-edit-modal .modal-content {
 	background-color: rgb(187, 223, 180);
 }
+
+#user-edit-form {
+	font-size: 1.2em;
+	padding: 0 50px;
+}
+#core_user_edit_roles {
+	padding: 8px 0 0;
+}
+#core_user_edit_roles_0, #core_user_edit_roles_1 {
+	margin: 0 8px 0 0;
+}
+#core_user_edit_roles_1 {
+	margin-left: 30px;
+}
+#user-edit-form-pass-info {
+	margin-bottom: 20px;
+}
+
 #admin_obs-modal-state ul {
 	padding: 0;
 }
@@ -112,6 +129,11 @@ body {
 	#observations .observation-row {
 		line-height: 30px;
 	}
+
+	#user-edit-form {
+		padding: 0;
+	}
+
 	.admin_obs-modal-body .admin_obs-modal-left-panel {
 		margin-top: 0;
 	}
@@ -131,5 +153,9 @@ body {
 
 	#observations .nav li>a {
 		font-size: 0.7em;
+	}
+
+	#core_user_edit_roles_1 {
+		margin-left: 10px;
 	}
 }
