--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,5 +1,6 @@
 {% extends "@FOSUser/layout.html.twig" %}
 {% set loginPage = true %}
+{% form_theme form 'form/form_errors.html.twig' %}
 
 {% block title %}
     {{ 'core.login.title'|trans }} - {{ parent() }}
