--- a/app/Resources/views/admin/macros/_macroObservationModal.html.twig
+++ b/app/Resources/views/admin/macros/_macroObservationModal.html.twig
@@ -27,7 +27,7 @@
 		      	</div>
 
 		      	<div class="modal-footer">
-			        <button class="btn btn-info" data-dismiss="modal">Fermer</button>
+			        <button class="btn btn-info" data-dismiss="modal">{{ 'core.admin.close'|trans }}</button>
 			     </div>
 		    </div>
 	  	</div>
