--- a/app/Resources/views/form/user_edit_form.html.twig
+++ b/app/Resources/views/form/user_edit_form.html.twig
@@ -59,7 +59,7 @@
     <hr />
 
     <p id="user-edit-form-pass-info">
-        Ne remplissez pas ces champs si vous ne souhaitez pas modifier le mot de passe actuel de l'utilisateur.
+        {{ 'core.admin.edit.info'|trans }}
     </p>
 
     <div class="form-group">
