--- a/app/Resources/views/admin/macros/_macroUserDeleteModal.html.twig
+++ b/app/Resources/views/admin/macros/_macroUserDeleteModal.html.twig
@@ -6,18 +6,17 @@
 			        <button type="button" class="close" data-dismiss="modal">x</button>
 			        
 			        <h4 class="modal-title">
-			        	Supprimer l'utilisateur
+			        	{{ 'core.admin.delete.title'|trans }}
 			        </h4>
 			     </div>
 
 		      	<div class="modal-body admin_obs-modal-body">
-		      		Êtes-vous certain(e) de vouloir supprimer définitivement cet utilisateur ?<br />
-		      		Cette action est irréversible.
+		      		{{ 'core.admin.delete.question'|trans|nl2br }}
 		      	</div>
 
 		      	<div class="modal-footer">
-			        <a class="btn btn-success" href="{{ path('admin_home') }}" title="Confirmer la suppression de l'utilisateur" id="admin_user-delete-modal-confirm">Confirmer</a>
-			        <button class="btn btn-danger" data-dismiss="modal">Annuler</button>
+			        <a class="btn btn-success" href="{{ path('admin_home') }}" title="Confirmer la suppression de l'utilisateur" id="admin_user-delete-modal-confirm">{{ 'core.admin.confirm'|trans }}</a>
+			        <button class="btn btn-danger" data-dismiss="modal">{{ 'core.admin.abort'|trans }}</button>
 			     </div>
 		    </div>
 	  	</div>
