--- a/app/Resources/views/admin/macros/_macroUserEditModal.html.twig
+++ b/app/Resources/views/admin/macros/_macroUserEditModal.html.twig
@@ -4,7 +4,7 @@
 		    <div class="modal-content">
 		      	<div class="modal-header">
 		        	<button type="button" class="close" data-dismiss="modal">x</button>
-		        	<h4 class="modal-title">Modifier l'utilisateur</h4>
+		        	<h4 class="modal-title">{{ 'core.admin.edit.title'|trans }}</h4>
 		        </div>
 		      	
 		      	<div class="modal-body" id="admin_user-edit-modal-body">
@@ -13,9 +13,9 @@
 
 		      	<div class="modal-footer">
 			        <label for="user-edit-form-button" tabindex="0" class="btn btn-success" data-href="{{ path('admin_home') }}" id="admin_user-edit-modal-confirm">
-			        	Confirmer
+			        	{{ 'core.admin.confirm'|trans }}
 			        </label>
-			        <button class="btn btn-danger" data-dismiss="modal">Annuler</button>
+			        <button class="btn btn-danger" data-dismiss="modal">{{ 'core.admin.abort'|trans }}</button>
 			     </div>
 
 		    </div>
