--- a/app/Resources/views/observation/observation.html.twig
+++ b/app/Resources/views/observation/observation.html.twig
@@ -82,6 +82,7 @@
           <div class="row noPadding">
             <div class="col-xs-12 col-sm-offset-3 col-sm-8">
               {{ form_widget(form.birdName) }}
+              {{ form_widget(form.birdId) }}
               {{ form_errors(form.birdName) }}
             </div>
           </div>
