--- a/web/bundles/app/css/main.css
+++ b/web/bundles/app/css/main.css
@@ -63,12 +63,6 @@ a {
   max-width: 51px;
   max-height: 51px;
 }
-.jcarousel img {
-    display: block;
-    max-width: 100%;
-    height: auto !important;
-}
-.w3-margin-top{margin-top:16px!important}.w3-margin-bottom{margin-bottom:16px!important}
 
 .btn-standard {
    padding: 10px 30px 10px 30px;
@@ -76,7 +70,30 @@ a {
    font-size: 20pt;
    font-family: 'OpenSans Regular';
  }
-.w3-center{text-align:center!important}
+ .btn-loading {
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.jcarousel img {
+    display: block;
+    max-width: 100%;
+    height: auto !important;
+}
+
+.w3-margin-top {
+    margin-top:16px!important
+}
+.w3-margin-bottom {
+    margin-bottom:16px!important
+}
+.w3-center {
+    text-align:center!important
+}
+
 input.parsley-success,
 select.parsley-success,
 textarea.parsley-success {
@@ -84,7 +101,6 @@ textarea.parsley-success {
   background-color: #DFF0D8;
   border: 1px solid #D6E9C6;
 }
-
 input.parsley-error,
 select.parsley-error,
 textarea.parsley-error {
@@ -92,7 +108,6 @@ textarea.parsley-error {
   background-color: #F2DEDE;
   border: 1px solid #EED3D7;
 }
-
 .parsley-errors-list {
   margin: 2px 0 3px;
   padding: 0;
@@ -106,10 +121,13 @@ textarea.parsley-error {
   -moz-transition: all .3s ease-in;
   -webkit-transition: all .3s ease-in;
 }
-
 .parsley-errors-list.filled {
   opacity: 1;
 }
+
+
+
+
 
 @media (max-width: 767px) {
   #wrapper {
